<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/woody">

    <RelativeLayout
        android:id="@+id/grid5_scoreContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#66ffffff">

        <TextView
            android:id="@+id/grid5_playerOneName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:drawableStart="@drawable/ic_person_black_24dp"
            android:background="@drawable/button_background"/>

        <TextView
            android:id="@+id/colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/colon"
            android:textSize="32sp"
            android:layout_margin="8dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/grid5_playerOne_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:textColor="@android:color/white"
            android:layout_alignRight="@id/colon"
            android:layout_alignEnd="@id/colon"
            android:textAlignment="center"
            />



        <TextView
            android:id="@+id/grid5_playerTwo_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textSize="32sp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:layout_alignLeft="@id/colon"
            android:layout_alignStart="@id/colon"
            android:textColor="@android:color/white"
            />

        <TextView
            android:id="@+id/grid5_playerTwoName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="5dp"
            android:gravity="center"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:drawableRight="@drawable/ic_person_black_24dp"
            android:drawableEnd="@drawable/ic_person_black_24dp"
            android:background="@drawable/button_background"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/grid5_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grid5_btn1"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn2"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn3"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn4"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn5"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grid5_btn6"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn7"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_margin="4dp"
                android:background="@drawable/button_background"
                />

            <Button
                android:id="@+id/grid5_btn8"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn9"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_margin="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn10"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grid5_btn11"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn12"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn13"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn14"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn15"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grid5_btn16"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn17"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_margin="4dp"
                android:background="@drawable/button_background"
                />

            <Button
                android:id="@+id/grid5_btn18"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn19"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_margin="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn20"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/button_background"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/grid5_btn21"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn22"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn23"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn24"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:background="@drawable/button_background"/>

            <Button
                android:id="@+id/grid5_btn25"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:textSize="32sp"
                android:background="@drawable/button_background"/>
        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/grid5_winner_container"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:background="@drawable/pop_up"
        android:visibility="gone">

        <TextView
            android:id="@+id/grid5_winner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:layout_margin="10dp"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/grid5_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:layout_alignParentBottom="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:textSize="12sp"
            android:background="@drawable/button_background"/>

        <Button
            android:id="@+id/grid5_next_round"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next_round"
            android:textSize="12sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_margin="5dp"
            android:padding="5dp"
            android:background="@drawable/button_background"
            />

    </RelativeLayout>

</RelativeLayout>